Adding Morse code parser and tests

--- a/WeGetSignal.test/WeGetSignal.test.csproj
+++ b/WeGetSignal.test/WeGetSignal.test.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MorseCodeTests.cs" />
     <Compile Include="SimpleWiresTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
