--- a/WeGetSignal/WeGetSignal.csproj
+++ b/WeGetSignal/WeGetSignal.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Module.cs" />
+    <Compile Include="Morse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wires.cs" />
